# homework-bot

./: .env.example  README.md  exceptions.py  homework.py  pyproject.toml
