[project]
name = "homework-bot"
version = "1.0.0"
description = "Telegram bot for checking homework status"
requires-python = ">=3.9"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle (docstring conventions)
]

fixable = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

